--- a/src/app/components/list-citas/list-citas.component.html
+++ b/src/app/components/list-citas/list-citas.component.html
@@ -1,8 +1,18 @@
-<div class="card bg-light">
-    <div class="card-header text-center h3">
-        Listado de Citas
-    </div>
+
+<div *ngIf="listAdoCitas.length === 0" class="card bg-light py-2">
     <div class="body">
-     
+      <h5 class="card-title text-center text-danger h4">No hay datos para mostrar</h5>
+    </div>
+</div>
+
+
+
+<div *ngFor="let cita of listAdoCitas; let i = index" class="card bg-light mb-2 p-2">
+    <div class="body">
+      <p class="card-text"><span>Nombre: </span>{{cita.nombre}}</p>
+      <p class="card-text"><span>Fecha: </span>{{cita.fecha}}</p>
+      <p class="card-text"><span>Hora: </span>{{cita.hora}}</p>
+      <p class="card-text"><span>Sintomas: </span>{{cita.sintomas}}</p>
+      <button style="width: 100%;" class="btn btn-danger btn-block" (click)="removeCita(i)" >Eliminar</button>
     </div>
 </div>
