--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,10 @@
   </div>
   <div class="row mt-3">
     <div class="col-lg-6">
-        <app-create-cita></app-create-cita>
+        <app-create-cita (nuevaCita)="agregarCita($event)"></app-create-cita>
     </div>
     <div class="col-lg-6">
-        <app-list-citas></app-list-citas>
+        <app-list-citas [listAdoCitas]="listCitas"  (remove)="eliminarCita($event)"></app-list-citas>
     </div>
   </div>
 </div>
